--- a/tdi/MitDevices/CP7452.glade
+++ b/tdi/MitDevices/CP7452.glade
@@ -22,7 +22,7 @@
                 <property name="can_focus">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="tooltip" translatable="yes">Enter the ipaddress or hostname of the CPCI controller.</property>
-                <property name="putOnApply">False</property>
+                <property name="putOnApply">True</property>
                 <property name="nidOffset">-1</property>
               </widget>
               <packing>
@@ -38,7 +38,7 @@
                 <property name="can_focus">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="tooltip" translatable="yes">Enter the CPCI Board number.</property>
-                <property name="putOnApply">False</property>
+                <property name="putOnApply">True</property>
                 <property name="nidOffset">-1</property>
               </widget>
               <packing>
@@ -53,7 +53,7 @@
                 <property name="can_focus">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="tooltip" translatable="yes">Enter a comment for this device.</property>
-                <property name="putOnApply">False</property>
+                <property name="putOnApply">True</property>
                 <property name="nidOffset">-1</property>
               </widget>
               <packing>
