--- a/javadevices/MARTE_MHD_ISetup.form
+++ b/javadevices/MARTE_MHD_ISetup.form
@@ -108,7 +108,7 @@
               <Properties>
                 <Property name="choiceItems" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
                   <StringArray count="1">
-                    <StringItem index="0" value="MhdBrControl"/>
+                    <StringItem index="0" value="MhdIControl"/>
                   </StringArray>
                 </Property>
                 <Property name="identifier" type="java.lang.String" value=""/>
