--- a/javadevices/MARTE_MHD_ISetup.form
+++ b/javadevices/MARTE_MHD_ISetup.form
@@ -170,8 +170,8 @@
             <Container class="javax.swing.JPanel" name="jPanel3">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="Parameters">
-                    <Property name="tabTitle" type="java.lang.String" value="Parameters"/>
+                  <JTabbedPaneConstraints tabName="Mapping&amp;Offset">
+                    <Property name="tabTitle" type="java.lang.String" value="Mapping&amp;Offset"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -212,26 +212,21 @@
             <Container class="javax.swing.JPanel" name="jPanel4">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="Waveforms">
-                    <Property name="tabTitle" type="java.lang.String" value="Waveforms"/>
+                  <JTabbedPaneConstraints tabName="Alarms">
+                    <Property name="tabTitle" type="java.lang.String" value="Alarms"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
 
-              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
               <SubComponents>
-                <Container class="DeviceWaveParameters" name="deviceWaveParameters1">
+                <Component class="DeviceField" name="deviceField9">
                   <Properties>
-                    <Property name="baseName" type="java.lang.String" value=".WAVE_PARAMS"/>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="I2T Limit (A): "/>
+                    <Property name="offsetNid" type="int" value="32"/>
                   </Properties>
-                  <Constraints>
-                    <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
-                      <BorderConstraints direction="Center"/>
-                    </Constraint>
-                  </Constraints>
-
-                  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
-                </Container>
+                </Component>
               </SubComponents>
             </Container>
             <Container class="javax.swing.JPanel" name="jPanel10">
@@ -259,39 +254,6 @@
                     <Property name="numRows" type="int" value="192"/>
                     <Property name="offsetNid" type="int" value="10"/>
                     <Property name="useExpressions" type="boolean" value="true"/>
-                  </Properties>
-                  <Constraints>
-                    <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
-                      <BorderConstraints direction="Center"/>
-                    </Constraint>
-                  </Constraints>
-                </Component>
-              </SubComponents>
-            </Container>
-            <Container class="javax.swing.JPanel" name="jPanel11">
-              <Constraints>
-                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="Out Calibration">
-                    <Property name="tabTitle" type="java.lang.String" value="Out Calibration"/>
-                  </JTabbedPaneConstraints>
-                </Constraint>
-              </Constraints>
-
-              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
-              <SubComponents>
-                <Component class="DeviceTable" name="deviceTable2">
-                  <Properties>
-                    <Property name="columnNames" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
-                      <StringArray count="2">
-                        <StringItem index="0" value="Gain"/>
-                        <StringItem index="1" value="Offset"/>
-                      </StringArray>
-                    </Property>
-                    <Property name="displayRowNumber" type="boolean" value="true"/>
-                    <Property name="identifier" type="java.lang.String" value=""/>
-                    <Property name="numCols" type="int" value="2"/>
-                    <Property name="numRows" type="int" value="192"/>
-                    <Property name="offsetNid" type="int" value="11"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
