--- a/javadevices/MARTE_MHD_BTSetup.form
+++ b/javadevices/MARTE_MHD_BTSetup.form
@@ -3,8 +3,8 @@
 <Form version="1.7" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="deviceProvider" type="java.lang.String" value="localhost"/>
-    <Property name="deviceTitle" type="java.lang.String" value="MARTe MhdBr Setup"/>
-    <Property name="deviceType" type="java.lang.String" value="MARTE_MHD_I"/>
+    <Property name="deviceTitle" type="java.lang.String" value="MARTe MhdBt Setup"/>
+    <Property name="deviceType" type="java.lang.String" value="MARTE_MHD_BT"/>
     <Property name="height" type="int" value="400"/>
     <Property name="width" type="int" value="600"/>
   </Properties>
@@ -21,7 +21,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-113,0,0,1,-14"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-88,0,0,2,-59"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -108,7 +108,7 @@
               <Properties>
                 <Property name="choiceItems" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
                   <StringArray count="1">
-                    <StringItem index="0" value="MhdIControl"/>
+                    <StringItem index="0" value="MhdBrControl"/>
                   </StringArray>
                 </Property>
                 <Property name="identifier" type="java.lang.String" value=""/>
@@ -212,19 +212,133 @@
             <Container class="javax.swing.JPanel" name="jPanel4">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="Alarms">
-                    <Property name="tabTitle" type="java.lang.String" value="Alarms"/>
+                  <JTabbedPaneConstraints tabName="Thomson Triggers">
+                    <Property name="tabTitle" type="java.lang.String" value="Thomson Triggers"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
               <SubComponents>
+                <Component class="DeviceChoice" name="deviceChoice2">
+                  <Properties>
+                    <Property name="choiceIntValues" type="[I" editor="org.netbeans.modules.form.editors.PrimitiveTypeArrayEditor">
+                      <PropertyValue value="[0, 1, 2, 3, 4, 5, 6, 7, 8]"/>
+                    </Property>
+                    <Property name="choiceItems" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
+                      <StringArray count="9">
+                        <StringItem index="0" value="NONE"/>
+                        <StringItem index="1" value="MODE"/>
+                        <StringItem index="2" value="MODE_AND_PHASE"/>
+                        <StringItem index="3" value="RATIO"/>
+                        <StringItem index="4" value="RATIO_AND_PHASE"/>
+                        <StringItem index="5" value="MODE_M0_N7"/>
+                        <StringItem index="6" value="MODE_AND_PHASE_M0_N7"/>
+                        <StringItem index="7" value="MODE_M0_N1"/>
+                        <StringItem index="8" value="MODE_AND_PHASE_M0_N1"/>
+                      </StringArray>
+                    </Property>
+                    <Property name="convert" type="boolean" value="true"/>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Trig. Mode: "/>
+                    <Property name="offsetNid" type="int" value="1351"/>
+                    <Property name="updateIdentifier" type="java.lang.String" value=""/>
+                  </Properties>
+                </Component>
                 <Component class="DeviceField" name="deviceField9">
                   <Properties>
                     <Property name="identifier" type="java.lang.String" value=""/>
-                    <Property name="labelString" type="java.lang.String" value="I2T Limit (A): "/>
-                    <Property name="offsetNid" type="int" value="1351"/>
+                    <Property name="labelString" type="java.lang.String" value="Min Amp.: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1357"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField10">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Max Amp.: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1363"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField11">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Min Phase.: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1369"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField12">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Max Phase: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1375"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField13">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Min Ratio:  "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1381"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField14">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Max Ratio: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1387"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField15">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="N. Times:"/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1393"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField16">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Trig. Times:"/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1399"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField17">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Duration: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1405"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField18">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Threshold: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1411"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField19">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Inhibit: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1417"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField20">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="End Time: "/>
+                    <Property name="numCols" type="int" value="6"/>
+                    <Property name="offsetNid" type="int" value="1423"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -260,6 +374,47 @@
                       <BorderConstraints direction="Center"/>
                     </Constraint>
                   </Constraints>
+                </Component>
+              </SubComponents>
+            </Container>
+            <Container class="javax.swing.JPanel" name="jPanel11">
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
+                  <JTabbedPaneConstraints tabName="Correction">
+                    <Property name="tabTitle" type="java.lang.String" value="Correction"/>
+                  </JTabbedPaneConstraints>
+                </Constraint>
+              </Constraints>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+              <SubComponents>
+                <Component class="DeviceChoice" name="deviceChoice3">
+                  <Properties>
+                    <Property name="choiceIntValues" type="[I" editor="org.netbeans.modules.form.editors.PrimitiveTypeArrayEditor">
+                      <PropertyValue value="[0, 1, 2]"/>
+                    </Property>
+                    <Property name="choiceItems" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
+                      <StringArray count="3">
+                        <StringItem index="0" value="None"/>
+                        <StringItem index="1" value="Ip"/>
+                        <StringItem index="2" value="Bp"/>
+                      </StringArray>
+                    </Property>
+                    <Property name="convert" type="boolean" value="true"/>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Mode: "/>
+                    <Property name="offsetNid" type="int" value="1429"/>
+                    <Property name="updateIdentifier" type="java.lang.String" value=""/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceTable" name="deviceTable2">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Corr. Factors: "/>
+                    <Property name="numCols" type="int" value="1"/>
+                    <Property name="numRows" type="int" value="192"/>
+                    <Property name="offsetNid" type="int" value="1435"/>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
