--- a/javadevices/MARTE_EDA1Setup.form
+++ b/javadevices/MARTE_EDA1Setup.form
@@ -5,8 +5,8 @@
     <Property name="deviceProvider" type="java.lang.String" value="localhost"/>
     <Property name="deviceTitle" type="java.lang.String" value="MARTe EDA1Setup"/>
     <Property name="deviceType" type="java.lang.String" value="MARTE_EDA1"/>
-    <Property name="height" type="int" value="400"/>
-    <Property name="width" type="int" value="500"/>
+    <Property name="height" type="int" value="700"/>
+    <Property name="width" type="int" value="900"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="2"/>
@@ -21,7 +21,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-118,0,0,1,-33"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-2,0,0,2,-38"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -107,9 +107,8 @@
             <Component class="DeviceChoice" name="deviceChoice1">
               <Properties>
                 <Property name="choiceItems" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
-                  <StringArray count="2">
-                    <StringItem index="0" value="NONE"/>
-                    <StringItem index="1" value="MODE CONTROL"/>
+                  <StringArray count="1">
+                    <StringItem index="0" value="Eda1Control"/>
                   </StringArray>
                 </Property>
                 <Property name="identifier" type="java.lang.String" value=""/>
@@ -1621,7 +1620,7 @@
                           <Properties>
                             <Property name="identifier" type="java.lang.String" value=""/>
                             <Property name="labelString" type="java.lang.String" value="aaGain: "/>
-                            <Property name="numCols" type="int" value="4"/>
+                            <Property name="numCols" type="int" value="20"/>
                             <Property name="offsetNid" type="int" value="1417"/>
                           </Properties>
                         </Component>
@@ -1637,7 +1636,7 @@
                           <Properties>
                             <Property name="identifier" type="java.lang.String" value=""/>
                             <Property name="labelString" type="java.lang.String" value="bvGain: "/>
-                            <Property name="numCols" type="int" value="4"/>
+                            <Property name="numCols" type="int" value="20"/>
                             <Property name="offsetNid" type="int" value="1441"/>
                           </Properties>
                         </Component>
@@ -1651,7 +1650,7 @@
                           <Properties>
                             <Property name="identifier" type="java.lang.String" value=""/>
                             <Property name="labelString" type="java.lang.String" value="maxPVATCurr: "/>
-                            <Property name="numCols" type="int" value="4"/>
+                            <Property name="numCols" type="int" value="20"/>
                             <Property name="offsetNid" type="int" value="1447"/>
                           </Properties>
                         </Component>
@@ -1697,7 +1696,7 @@
                           <Properties>
                             <Property name="identifier" type="java.lang.String" value=""/>
                             <Property name="labelString" type="java.lang.String" value="tStartEquilIntegralAction: "/>
-                            <Property name="numCols" type="int" value="4"/>
+                            <Property name="numCols" type="int" value="20"/>
                             <Property name="offsetNid" type="int" value="1477"/>
                           </Properties>
                         </Component>
@@ -1774,7 +1773,10 @@
                     </Constraint>
                   </Constraints>
 
-                  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+                  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+                    <Property name="columns" type="int" value="1"/>
+                    <Property name="rows" type="int" value="2"/>
+                  </Layout>
                   <SubComponents>
                     <Component class="DeviceTable" name="deviceTable1">
                       <Properties>
