added infinite loop option

--- a/javadevices/FAKECAMERASetup.form
+++ b/javadevices/FAKECAMERASetup.form
@@ -125,6 +125,20 @@
                 <Property name="offsetNid" type="int" value="6"/>
               </Properties>
             </Component>
+            <Component class="DeviceChoice" name="deviceChoice6">
+              <Properties>
+                <Property name="choiceItems" type="[Ljava.lang.String;" editor="org.netbeans.beaninfo.editors.StringArrayEditor">
+                  <StringArray count="2">
+                    <StringItem index="0" value="YES"/>
+                    <StringItem index="1" value="NO"/>
+                  </StringArray>
+                </Property>
+                <Property name="identifier" type="java.lang.String" value=""/>
+                <Property name="labelString" type="java.lang.String" value="Infinite Loop:"/>
+                <Property name="offsetNid" type="int" value="7"/>
+                <Property name="updateIdentifier" type="java.lang.String" value=""/>
+              </Properties>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel9">
